--- a/wedstrijd/composer.json
+++ b/wedstrijd/composer.json
@@ -14,7 +14,8 @@
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.0",
         "symfony/css-selector": "3.1.*",
-        "symfony/dom-crawler": "3.1.*"
+        "symfony/dom-crawler": "3.1.*",
+        "maatwebsite/excel": "~2.1.0"
     },
     "autoload": {
         "classmap": [
