--- a/cocaCola/.env.example
+++ b/cocaCola/.env.example
@@ -5,11 +5,11 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=ID211210_coca.db.webhosting.be
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=ID211210_coca
+DB_USERNAME=ID211210_coca
+DB_PASSWORD=zaichik1988
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
