--- a/cocaCola/composer.json
+++ b/cocaCola/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.3.*",
         "laravelcollective/html": "^5.2.0",
         "maatwebsite/excel": "~2.1.0",
-        "guzzlehttp/guzzle": "~5.3|~6.0"
+        "guzzlehttp/guzzle": "~5.3|~6.0",
+        "paragonie/random_compat": "~1.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
